force-app/main/default/objects/Login_Error__mdt/Login_Error__mdt.object-meta.xml
<CustomObject>
    <label>Login Error</label>
    <pluralLabel>Login Errors</pluralLabel>
</CustomObject>