force-app/main/default/objects/Login_Error__mdt/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>