force-app/main/default/objects/Login_Error__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EN</fullName>
                <default>true</default>
                <label>EN</label>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>